fix: hide-scrollbar class

--- a/web/saito/css-imports/saito-base.css
+++ b/web/saito/css-imports/saito-base.css
@@ -242,6 +242,22 @@ Scrollbars
 }
 
 /* ----------------------------------------------------------------
+ Scrollbars 
+----------------------------------------------------------------- */
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+  overflow-y: auto;
+  overflow-x: auto;
+}
+
+
+/* ----------------------------------------------------------------
 Media Queries
 -----------------------------------------------------------------*/
 
